samples/_failures_safe/1761258382_defcd2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6314cb90.c: In function ‘main’:
./samples/SAFE/__tmp_6314cb90.c:153:60: error: ‘decomp’ undeclared (first use in this function)
  153 |     if (!decompress_rle(compressed.data, compressed.size, &decomp
      |                                                            ^~~~~~
./samples/SAFE/__tmp_6314cb90.c:153:60: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_6314cb90.c:153:66: error: expected ‘)’ at end of input
  153 |     if (!decompress_rle(compressed.data, compressed.size, &decomp
      |                        ~                                         ^
      |                                                                  )
./samples/SAFE/__tmp_6314cb90.c:153:5: error: expected declaration or statement at end of input
  153 |     if (!decompress_rle(compressed.data, compressed.size, &decomp
      |     ^~
